--- a/index.html
+++ b/index.html
@@ -11,19 +11,45 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css" />
+    <link rel="stylesheet" href="/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
     <link rel="stylesheet" href="index.css">
     <!-- Bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
+    <script src="/constants.js"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="logo" src="assets/recipe_radar_logo.jpg"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/recipe_list/index.html">Recipes</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+            <span class="cursor" id="profile"><i class="bi bi-person-circle"></i><a class="nav-link ms-2" href="/profile/index.html">Profile</a></span>
+           <button type="button" class="btn pt-0"><span id="logbtn">Login</span></button>
+          </span>
+        </div>
+      </div>
+    </nav>
+    <header class="container-fluid gx-0">
 
+      <h1 class="banner text-white text-center">Welcome to Recipe Radar</h1>
+    </header>
   </body>
 </html>
