--- a/recipe_list/index.html
+++ b/recipe_list/index.html
@@ -11,17 +11,21 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
+    <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="recipe_list.css" />
     <!-- Bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="recipe_list.js"></script>
+    <script src="/constants.js"></script>
   </head>
-  <body></body>
+  <body>
+
+  </body>
 </html>
