--- a/profile/index.html
+++ b/profile/index.html
@@ -22,6 +22,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="/constants.js"></script>
+    <script src="profile.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
@@ -33,14 +35,14 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/recipe_list/index.html">Recipes</a>
             </li>
           </ul>
           <span class="navbar-text">
-            <span class="cursor" id="profile"><i class="bi bi-person-circle"></i><a class="nav-link ms-2" href="/profile/index.html">Profile</a></span>
+            <span class="cursor" id="profile"><i class="bi bi-person-circle"></i><a class="nav-link ms-2 active" href="/profile/index.html">Profile</a></span>
            <button type="button" class="btn pt-0"><span id="logbtn">Login</span></button>
           </span>
         </div>
@@ -48,7 +50,7 @@
     </nav>
     <header class="container-fluid gx-0">
 
-      <h1 class="banner text-white text-center">Welcome to Recipe Radar</h1>
+      <h1 class="banner text-white text-center"></h1>
     </header>
     <main>
       <div class="container">
