Profile page changes and registration page changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
     <script src="/constants.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
@@ -59,8 +59,7 @@
                 >Profile</a
               ></span
             >
-            <button type="button" class="btn pt-0">
-              <span id="logbtn">Login</span>
+            <button type="button" class="btn btn-success pt-0" id="logbtn">Login
             </button>
           </span>
         </div>
