--- a/profile/index.html
+++ b/profile/index.html
@@ -43,7 +43,7 @@
           </ul>
           <span class="navbar-text">
             <span class="cursor" id="profile"><i class="bi bi-person-circle"></i><a class="nav-link ms-2 active" href="/profile/index.html">Profile</a></span>
-           <button type="button" class="btn pt-0"><span id="logbtn">Login</span></button>
+           <button type="button" class="btn btn-success pt-0"><span id="logbtn">Login</span></button>
           </span>
         </div>
       </div>
@@ -54,9 +54,26 @@
     </header>
     <main>
       <div class="container">
+        <div class="row text-center ">
+          <div class="col-sm-12 d-flex justify-content-center">
+            <div class="profile-image" id="profile-image">
+            </div>
+          </div>
+          <h3 id="username" class="mt-3"></h3>
+          <h4 class="text-primary-emphasis" id="recipe-count"></h4>
+        </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-12">
-
+          <div id="tabs">
+            <ul>
+              <li><a href="#tabs-1">My Recipes</a></li>
+              <li><a href="#tabs-2">Liked Recipes</a></li>
+            </ul>
+            <div id="tabs-1">
+              <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+            </div>
+            <div id="tabs-2">
+              <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+            </div>
           </div>
         </div>
       </div>
