--- a/recipe_details/index.html
+++ b/recipe_details/index.html
@@ -80,7 +80,7 @@
       <div
         class="container h-100 d-flex align-items-end justify-content-center position-relative"
       >
-        <h1 class="text-white mb-4">Delicious Vegetable Burger</h1>
+        <h1 class="text-white mb-4" id="recipe_name"></h1>
       </div>
     </section>
     <section class="recipe-details-section py-5">
@@ -93,11 +93,14 @@
           </div>
           <div class="col-lg-5 mt-5" style="margin-left: 60px">
             <div class="recipe-desc-box bg-gray-100">
-              <h5 class="recipe-title"></h5>
-              <div class="recipe-ingredients"></div>
+              <h5 class="recipe-title"> <strong> Ingredients </strong></h5>
+              
+              <h5 class="recipe-ingredients"></h5>
+
               <div class="d-sm-flex"></div>
             </div>
           </div>
+          <h5><strong> Instructions </strong></h5>
           <h5 class="recipe-instructions"></h5>
         </div>
       </div>
