changes done static image

--- a/recipe_details/index.html
+++ b/recipe_details/index.html
@@ -88,9 +88,20 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="recipe-img-box">
-              <ul class="bxslider"></ul>
+              <ul class="bxslider">
+                <li>
+                  <img src="/assets/spaghetti 1.jpg" alt="Image 1">
+                </li>
+                <li>
+                  <img src="/assets/spaghetti 2.jpg" alt="Image 2">
+                </li>
+                <li>
+                  <img src="/assets/spaghetti 3.jpg" alt="Image 3">
+                </li>
+              </ul>
             </div>
           </div>
+          
           <div class="col-lg-5 mt-5" style="margin-left: 60px">
             <div class="recipe-desc-box bg-gray-100">
               <h5 class="recipe-title"> <strong> Ingredients </strong></h5>
