--- a/recipe_list/index.html
+++ b/recipe_list/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <button type="button" id="0"
-    class="flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-    onclick="getId(this.id);">Buy Now</button>
+    class="btnReadmore" style="color: darkcyan;"
+    onclick="getId(this.id);">Read More</button>
   </body>
 </html>
