--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <span class="cursor" id="profile"
+            <span class="cursor me-3" id="profile"
               ><i class="bi bi-person-circle"></i
               ><a class="nav-link ms-2" href="/profile/index.html"
                 >Profile</a
