--- a/profile/index.html
+++ b/profile/index.html
@@ -42,8 +42,14 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <span class="cursor" id="profile"><i class="bi bi-person-circle"></i><a class="nav-link ms-2 active" href="/profile/index.html">Profile</a></span>
-           <button type="button" class="btn btn-success pt-0"><span id="logbtn">Login</span></button>
+            <span class="cursor me-3" id="profile"
+              ><i class="bi bi-person-circle"></i
+              ><a class="nav-link ms-2" href="/profile/index.html"
+                >Profile</a
+              ></span
+            >
+            <button type="button" class="btn btn-success pt-0" id="logbtn">Login
+            </button>
           </span>
         </div>
       </div>
