--- a/recipe_details/index.html
+++ b/recipe_details/index.html
@@ -25,7 +25,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
@@ -93,8 +93,8 @@
           </div>
           <div class="col-lg-5 mt-5" style="margin-left: 60px">
             <div class="recipe-desc-box bg-gray-100">
-              <h5 class="recipe-title"> <strong> Ingredients </strong></h5>
-              
+              <h5 class="recipe-title"><strong> Ingredients </strong></h5>
+
               <h5 class="recipe-ingredients"></h5>
 
               <div class="d-sm-flex"></div>
