--- a/recipe_list/index.html
+++ b/recipe_list/index.html
@@ -26,6 +26,34 @@
     <script src="/constants.js"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html"><img class="logo" src="/assets/recipe_radar_logo.jpg"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/recipe_list/index.html">Recipes</a>
+            </li>
+          </ul>
+          <span class="navbar-text">
+            <span class="cursor me-3" id="profile"
+              ><i class="bi bi-person-circle"></i
+              ><a class="nav-link ms-2" href="/profile/index.html"
+                >Profile</a
+              ></span
+            >
+            <button type="button" class="btn btn-success pt-0" id="logbtn">Login
+            </button>
+          </span>
+        </div>
+      </div>
+    </nav>
     <button type="button" id="0"
     class="btnReadmore" style="color: darkcyan;"
     onclick="getId(this.id);">Read More</button>
