Add Recipe page

--- a/add_recipe/index.html
+++ b/add_recipe/index.html
@@ -11,17 +11,73 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/recipe_application/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
+    <link rel="stylesheet" href="/recipe_application/index.css" />
     <link rel="stylesheet" href="add_recipe.css" />
     <!-- Bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="/recipe_application/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="add_recipe.js"></script>
+    <script src="/recipe_application/constants.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1> Add Receipe</h1>
+    <main>
+      <form>
+        <div class="form-group">
+          
+          <label for="recipe_name">Title:</label>
+          <input type="text" class="form-group" id="recipe_name">
+        </div>
+        <div>
+          <label for="Ingredients">Ingredients:</label>
+          <textarea id="Ingredients" name="Ingredients" rows="1" cols="0"></textarea>
+          </div>
+          <div>
+          <label for="Instructions">Instructions:</label>
+          <textarea id="Instructions" name="Instructions" rows="1" cols="0"></textarea>
+        </div>
+        <div>
+          <label for="category">Category:</label>
+          <select class="form-select" aria-label="category">
+            <option selected> select</option>
+            <option value="1">Main Dish</option>
+            <option value="2">Salad</option>
+            <option value="3">Appetizer</option>
+            <option value="4">Dessert</option>
+            <option value="5">Side Dish</option>
+            <option value="6">Soup</option>
+            <option value="7">Breakfast</option>
+          </select>
+        </div>
+        <div>
+          <label for="origins">origins:</label><select class="form-select" aria-label="origins">
+            <option selected>select</option>
+            <option value="1">Italy</option>
+            <option value="2">India</option>
+            <option value="3">Japan</option>
+            <option value="4">Mexico</option>
+            <option value="5">Russia</option>
+            <option value="6">Greece</option>
+            <option value="7">Thailand</option>
+            <option value="8">France</option>
+            <option value="9">Vietnam</option>
+            <option value="10">Middle East</option>
+            <option value="11">United States</option>
+            <option value="12">United Kingdom</option>
+            <option value="13">China</option>
+            <option value="14">Hungary</option>
+          </select>
+        </div>
+
+        
+      </form>
+      <input class="btn btn-primary" type="submit" id="submit" value="Submit">
+    </main>
+  </body>
 </html>
