--- a/recipe_details/index.html
+++ b/recipe_details/index.html
@@ -45,8 +45,8 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/recipe_list/index.html">Recipes</a>
+            <li class="nav-item ">
+              <a class="nav-link active" href="/recipe_list/index.html">Recipes</a>
             </li>
           </ul>
           <span class="navbar-text">
