changes in the recipe list

--- a/recipe_list/index.html
+++ b/recipe_list/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/recipe_list/index.html">Recipes</a>
+              <a class="nav-link active" href="/recipe_list/index.html">Recipes</a>
             </li>
           </ul>
           <span class="navbar-text">
