added general changes and css

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h2 class="text-center py-3">Our Recipe category!</h2>
         </div>
         <div class="row mb-4">
-          <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="col-lg-3 col-md-6 col-sm-12 my-3">
             <div class="card category-card">
               <img src="/assets/indian.jpg" class="card-img-top" alt="Indian food" />
               <div class="dish-category-title">Indian</div>
@@ -90,7 +90,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="col-lg-3 col-md-6 col-sm-12 my-3">
             <div class="card category-card">
               <img src="/assets/japanese.jpg" class="card-img-top" alt="Japanese food" />
               <div class="dish-category-title">Japanese</div>
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="col-lg-3 col-md-6 col-sm-12 my-3">
             <div class="card category-card">
               <img src="/assets/italian.jpg" class="card-img-top" alt="Italian dish" />
               <div class="dish-category-title">Italian</div>
@@ -112,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="col-lg-3 col-md-6 col-sm-12 my-3">
             <div class="card cursor" style="height: 100%;">
               <div class="card-body view-all">
                 <p class="card-text">
@@ -126,3 +126,5 @@
     </main>
   </body>
 </html>
+<!-- Author: Dinesh Narasimhalu Punniyamoorthy
+     Student Id: 8972738 -->
