--- a/recipe_details/index.html
+++ b/recipe_details/index.html
@@ -89,8 +89,8 @@
             </div>
           </div>
           
-          <div class="col-lg-5 mt-5" style="margin-left: 60px">
-            <div class="recipe-desc-box bg-gray-100">
+          <div class="col-lg-5 mt-5 recipe-desc-container" >
+            <div class="recipe-desc-box">
               <h5 class="recipe-title"><strong> Ingredients </strong></h5>
 
               <h5 class="recipe-ingredients"></h5>
