--- a/profile/index.html
+++ b/profile/index.html
@@ -75,10 +75,12 @@
               <li><a href="#tabs-2">Liked Recipes</a></li>
             </ul>
             <div id="tabs-1">
-              <div id="my-recipes"></div>
+              <div class="row" id="my-recipes">
+                
+              </div>
             </div>
             <div id="tabs-2">
-              <div id="liked-recipes"></div>
+              <div class="row" id="liked-recipes"></div>
             </div>
           </div>
         </div>
