--- a/add_recipe/index.html
+++ b/add_recipe/index.html
@@ -107,8 +107,18 @@
           
           
         </form>
-        <input class="btn btn-primary" type="submit" id="submit" value="Submit">
+        <div class="d-flex justify-content-center my-3">
+
+          <input class="btn btn-primary" type="submit" id="submit" value="Submit">
+        </div>
+        <div class="toaster">
+
+        </div>
       </div>
       </main>
   </body>
 </html>
+
+
+<!-- Author: Venkat Lavu
+     Student Id: 8968788 -->
